StudiesTable: prevent text from overflowing cellContents

--- a/client/components/StudiesTable.scss
+++ b/client/components/StudiesTable.scss
@@ -68,6 +68,7 @@ $column_width: 300px;
     height: 100%;
     width: 100%;
     transition: all 0.3s ease;
+    overflow: hidden;
 
     & > .icon_comment {
       position: absolute;
